tests/sksl/errors/ReservedNameFvec2.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'fvec2'
1 error
